# sentei-pictures

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  choice.py  main.py  pyproject.toml  reduce.py
.claude/: settings.local.json
src/sentei_pictures/: __init__.py
src/sentei_pictures/cli/: __init__.py  choice.py  input_handler.py  main.py  reduce.py
src/sentei_pictures/core/: __init__.py  file_matcher.py  image_processor.py
src/sentei_pictures/gui/: __init__.py  choice_window.py  gui_main.py  integrated_window.py  main_window.py  reduce_window.py  widgets.py
tests/: __init__.py  test_file_matcher.py  test_image_processor.py
